    - Fixed crash when claiming hexes near ungenerated chunks.
    - Fixed that the guaranteed trades on Nauvis could be put in water hexes, where they would never be found.
    - Fixed that the piggy bank was deleting coins when your inventory is full.
    - Fixed that trade productivity would be displayed as being high enough for item rank-ups but they weren't when attempted.
    - Fixed that the /summon command would only spawn units on Nauvis.
    - Fixed incompatibilities with some quality mods.
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when a hex core GUI is open.
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when you open an equipment grid while viewing a hex core right before a train makes a trade at that hex core.
---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 4/2/26
  Gui:
    - Improved the quality selection GUI for trades, reducing icon clutter and showing only valid choices.
    - Trades in the hex core GUI now separately show the quality (trade productivity and the quality symbols on items) to which they are set.
    - Removed the quality dropdown to the right of the "Trades" header in the hex core GUI.
  Bugfixes:
    - Fixed that hex core GUI was sometimes getting updated rapidly and interfering with GUI controls. 
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 3/2/26
  Bugfixes:
    - Spiral world generation now respects planet size settings.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 3/2/26
  Features: